tests/type_errors/elif1.pylambda
print 1;
elif true{
    print 1;
}